CHANGELOG
--------------------------

ClanSphere 2011.4.2 >> 2013-XX-XX
___________________________________________________________

-> Fixed boardvotes not usable on different accounts due to same ip (tom08)


ClanSphere 2011.4.1 >> 2013-05-20
___________________________________________________________

-- Recommended PHP version changed to 5.4.15

-> Downgraded jQuery to 1.8.3 [R1]
-> Changed jabber info to no longer contain Google service examples (hajo)
   Google combined the services to Hangouts which is not compatible with jabber
-> Fixed board threads marked as unread for no reason due to deleted comments (hajo)
   This fix only affects the mass deletion of comments over the comments mod
-> Fixed users manage page turns not working in some cases (hajo) [R2]
-> Updated copyright information (hajo)


ClanSphere 2011.4 >> 2013-03-06
___________________________________________________________

-- Recommended PHP version changed to 5.4.12

-> Added jabber account data as a replacement for MSN (hajo)
   MSN Chat Service ends on 8th of april due to the fusion with Skype
-> Fixed articles listcat page switch not working (hajo)
-> Fixed board active and new page links to threads (patch by atajsic)
-> Fixed files download handling for non-existing mirrors (hajo)
-> Fixed spelling of some words in English translation (hajo)
-> Removed ckeditor and fckeditor filebrowser (hajo)
   The ckeditor mod can be found in the module db from now on
-> Removed version and icon requirements from games mod (hajo)
-> Reworked users manage name search to allow for page turns (hajo)
-> Updated jQuery to 1.9.1


ClanSphere 2011.3 Patch 4 >> 2013-01-28
___________________________________________________________

-- Version and Update Check URLs have changed with this release
-- Earlier releases might not get notified about future changes

-> Added PHP GD Extension version to software overview (hajo)
-> Added rewrite support (Pretty URLs) for Lighttpd and Nginx (hajo)