@@ -1,0 +1,16 @@
+<form method="post" id="board_remove" action="{url:board_metadata}">
+<table class="forum" cellpadding="0" cellspacing="{page:cellspacing}" style="width:{page:width}">
+ <tr>
+  <td class="headb">{lang:mod_name} - {lang:repair}</td>
+ </tr>
+ <tr>
+  <td class="leftb">{lang:metadata_info}<br /><br />{lang:metadata_com}</td>
+ </tr>
+ <tr>
+  <td class="centerc">
+     <input type="submit" name="agree" value="{lang:confirm}" />
+     <input type="submit" name="cancel" value="{lang:cancel}" />
+  </td>
+ </tr>
+</table>
+</form>
